ci: add release workflow